# advent-of-code-rust

./: .gitattributes  .pre-commit-config.yaml  Cargo.toml  README.md  regression-test.py  requirements.txt
.cargo/: config.toml
.github/workflows/: cmptimes.yml  regression-test.yml  test.yml
2015/: answers.csv
2015/01a/: Cargo.toml
2015/01a/src/: main.rs
2015/01b/: Cargo.toml
2015/02a/: Cargo.toml
2015/02a/src/: main.rs
2015/02b/: Cargo.toml
2015/02b/src/: main.rs
2015/03a/: Cargo.toml
2015/03b/: Cargo.toml
2015/04a/: Cargo.toml
2015/04a/src/: main.rs
2015/04b/: Cargo.toml
2015/04b/src/: main.rs
2015/05a/: Cargo.toml
2015/05a/src/: main.rs
2015/05b/: Cargo.toml
2015/05b/src/: main.rs
2015/06a/: Cargo.toml
2015/06b/: Cargo.toml
2015/06b/src/: main.rs
2015/07a/: Cargo.toml
2015/07a/src/: main.rs
2015/07b/: Cargo.toml
2015/07b/src/: main.rs
2015/08a/: Cargo.toml
2015/08b/: Cargo.toml
2015/08b/src/: main.rs
2015/09a/: Cargo.toml
2015/09a/src/: main.rs
2015/09b/: Cargo.toml
2015/10a/: Cargo.toml
2015/10a/src/: main.rs
2015/10b/: Cargo.toml
2015/10b/src/: main.rs
2015/11a/: Cargo.toml
2015/11a/src/: main.rs
2015/11b/: Cargo.toml
2015/11b/src/: main.rs
2015/12a/: Cargo.toml
2015/12a/src/: main.rs
2015/12b/: Cargo.toml
2015/12b/src/: main.rs
2015/13a/: Cargo.toml
2015/13a/src/: main.rs
2015/13b/: Cargo.toml
2015/13b/src/: main.rs
2015/14a/: Cargo.toml
2015/14a/src/: main.rs
2015/14b/: Cargo.toml
2015/14b/src/: main.rs
2015/15a/: Cargo.toml
2015/15a/src/: main.rs
2015/15b/: Cargo.toml
2015/15b/src/: main.rs
2015/16a/: Cargo.toml
2015/16b/: Cargo.toml
2015/17a/: Cargo.toml
2015/17a/src/: main.rs
2015/17b/: Cargo.toml
2015/17b/src/: main.rs
2015/18a/: Cargo.toml
2015/18b/: Cargo.toml
2015/18b/src/: main.rs
2015/19a/: Cargo.toml
2015/19b/: Cargo.toml
2015/20a/: Cargo.toml
2015/20b/: Cargo.toml
2015/21a/: Cargo.toml
2015/21b/: Cargo.toml
2015/22a/: Cargo.toml
2015/22b/: Cargo.toml
2015/23a/: Cargo.toml
2015/23b/: Cargo.toml
2015/24a/: Cargo.toml
2015/24b/: Cargo.toml
2015/25a/: Cargo.toml
2015/inputs/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt
2016/: 23b.md  25.md  answers.csv
2016/01a/: Cargo.toml
2016/01b/: Cargo.toml
2016/02a/: Cargo.toml
2016/02b/: Cargo.toml
2016/03a/: Cargo.toml
2016/03b/: Cargo.toml
2016/04a/: Cargo.toml
2016/04b/: Cargo.toml
2016/05a/: Cargo.toml
2016/05b/: Cargo.toml
2016/06a/: Cargo.toml
2016/06b/: Cargo.toml
2016/07a/: Cargo.toml
2016/07b/: Cargo.toml
2016/08a/: Cargo.toml
2016/08b/: Cargo.toml  answer.txt  output.txt
2016/09a/: Cargo.toml
2016/09b/: Cargo.toml
2016/10a/: Cargo.toml
2016/10b/: Cargo.toml
2016/11a/: Cargo.toml
2016/12a/: Cargo.toml
2016/12b/: Cargo.toml
2016/13a/: Cargo.toml
2016/13b/: Cargo.toml
2016/14a/: Cargo.toml
2016/14b/: Cargo.toml
2016/15a/: Cargo.toml
2016/15b/: Cargo.toml
2016/16a/: Cargo.toml
2016/16b/: Cargo.toml
2016/17a/: Cargo.toml
2016/17b/: Cargo.toml
2016/18a/: Cargo.toml
2016/18b/: Cargo.toml
2016/19a/: Cargo.toml
2016/19b/: Cargo.toml
2016/20a/: Cargo.toml
2016/20b/: Cargo.toml
2016/21a/: Cargo.toml
2016/21b/: Cargo.toml
2016/22a/: Cargo.toml
2016/23a/: Cargo.toml
2016/24a/: Cargo.toml
2016/24b/: Cargo.toml
2016/inputs/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt
2017/: 23b.md  answers.csv
2017/01a/: Cargo.toml
2017/01b/: Cargo.toml
2017/02a/: Cargo.toml
2017/02b/: Cargo.toml
2017/03a/: Cargo.toml
2017/03b/: Cargo.toml
2017/04a/: Cargo.toml
2017/04b/: Cargo.toml
2017/05a/: Cargo.toml
2017/05b/: Cargo.toml
2017/06a/: Cargo.toml
2017/06b/: Cargo.toml
2017/07a/: Cargo.toml
2017/07b/: Cargo.toml
2017/08a/: Cargo.toml
2017/08b/: Cargo.toml
2017/09a/: Cargo.toml
2017/09b/: Cargo.toml
2017/10a/: Cargo.toml
2017/10b/: Cargo.toml
2017/11a/: Cargo.toml
2017/11b/: Cargo.toml
2017/12a/: Cargo.toml
2017/12b/: Cargo.toml
2017/13a/: Cargo.toml
2017/13b/: Cargo.toml
2017/14a/: Cargo.toml
2017/14b/: Cargo.toml
2017/15a/: Cargo.toml
2017/15b/: Cargo.toml
2017/16a/: Cargo.toml
2017/16b/: Cargo.toml
2017/17a/: Cargo.toml
2017/17b/: Cargo.toml
2017/18a/: Cargo.toml
2017/18b/: Cargo.toml
2017/19a/: Cargo.toml
2017/19b/: Cargo.toml
2017/20a/: Cargo.toml
2017/20b/: Cargo.toml
2017/21a/: Cargo.toml
2017/21b/: Cargo.toml
2017/22a/: Cargo.toml
2017/22b/: Cargo.toml
2017/23a/: Cargo.toml
2017/24a/: Cargo.toml
2017/24b/: Cargo.toml
2017/25a/: Cargo.toml
2017/inputs/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt
2018/: answers.csv
2018/01a/: Cargo.toml
2018/01b/: Cargo.toml
2018/02a/: Cargo.toml
2018/02b/: Cargo.toml
2018/03a/: Cargo.toml
2018/03b/: Cargo.toml
2018/04a/: Cargo.toml
2018/04b/: Cargo.toml
2018/05a/: Cargo.toml
2018/05b/: Cargo.toml
2018/06a/: Cargo.toml
2018/06b/: Cargo.toml
2018/07a/: Cargo.toml
2018/07b/: Cargo.toml
2018/08a/: Cargo.toml
2018/08b/: Cargo.toml
2018/09a/: Cargo.toml
2019/: answers.csv
2020/: answers.csv
2021/: 24.md  answers.csv
2022/: answers.csv
2023/: answers.csv
2024/: answers.csv
2025/: answers.csv
adventutil/: Cargo.toml  README.md
adventutil/src/: area.rs  closure.rs  counter.rs  grid.rs  gridgeom.rs  index.rs  intcode.rs  lib.rs  maxn.rs  maxtracker.rs  numtheory.rs  ocr.rs  pullparser.rs  ranges.rs
adventutil/src/fonts/: large.toml  normal.toml
adventutil/src/grid/: cell.rs  iter.rs  util.rs
regresstest/: Cargo.toml
regresstest/src/: main.rs
(+793 files in other folders)
