[workspace]
members = ["adventutil", "20*/*"]

[workspace.package]
rust-version = "1.65"
description = "My solutions to <https://adventofcode.com> in Rust"
authors = ["John Thorvald Wodder II <advent-of-code-rust@varonathe.org>"]
repository = "https://github.com/jwodder/advent-of-code-rust"
license = "MIT"
publish = false
