[workspace]
members = ["adventutil", "regresstest", "20*/??[ab]"]

[workspace.package]
edition = "2021"
rust-version = "1.65"
description = "My solutions to <https://adventofcode.com> in Rust"
authors = ["John Thorvald Wodder II <advent-of-code-rust@varonathe.org>"]
repository = "https://github.com/jwodder/advent-of-code-rust"
license = "MIT"
publish = false
