[package]
name = "adventutil"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Common utilities for Advent of Code solutions"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.70"
thiserror = "1.0.40"

[dev-dependencies]
rstest = { version = "0.17.0", default-features = false }
