[package]
name = "adventutil"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Common utilities for Advent of Code solutions"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.70"
num-traits = "0.2.15"
serde = { version = "1.0.164", features = ["derive"], optional = true }
thiserror = "2.0.0"
toml = { version = "0.8.8", features = ["parse"], optional = true }

[dev-dependencies]
rstest = { version = "0.23.0", default-features = false }

[features]
ocr = ["dep:serde", "dep:toml"]

[lints]
workspace = true
