[package]
name = "regresstest"
edition.workspace = true
rust-version.workspace = true
description = "Regression testing"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.70"
csv = "1.2.2"
fern = "0.7.0"
fs-err = "3.0.0"
futures-util = { version = "0.3.28", default-features = false, features = ["std"] }
log = "0.4.18"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["macros", "process", "rt", "time"] }

[lints]
workspace = true
