[package]
name = "advent-of-code-2015-01a"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 01a"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
adventutil = { path = "../../adventutil" }

[dev-dependencies]
rstest = { version = "0.16.0", default-features = false }
