[package]
name = "advent-of-code-2015-02a"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 02a"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["geometry"]

[dependencies]
adventutil = { path = "../../adventutil" }

[lints]
workspace = true
