[package]
name = "advent-of-code-2015-02b"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 02b"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
keywords = ["geometry"]

[dependencies]
adventutil = { path = "../../adventutil" }

[lints]
workspace = true
