[package]
name = "advent-of-code-2015-04a"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 04a"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
keywords = ["md5"]

[dependencies]
adventutil = { path = "../../adventutil" }
hex = "0.4.3"
md-5 = "0.10.5"

[dev-dependencies]
rstest = { version = "0.19.0", default-features = false }

[lints]
workspace = true
