[package]
name = "advent-of-code-2015-04a"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 04a"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
keywords = ["md5"]

[dependencies]
adventutil = { path = "../../adventutil" }
hex.workspace = true
md-5.workspace = true

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
