[package]
name = "advent-of-code-2015-05b"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 05b"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
adventutil = { path = "../../adventutil" }
itertools = "0.14.0"

[dev-dependencies]
rstest = { version = "0.23.0", default-features = false }

[lints]
workspace = true
