[package]
name = "advent-of-code-2015-07b"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 07b"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
keywords = ["interpreter"]

[dependencies]
adventutil = { path = "../../adventutil" }

[dev-dependencies]
rstest = { version = "0.19.0", default-features = false }

[lints]
workspace = true
