[package]
name = "advent-of-code-2015-08b"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 08b"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["text-encoding"]

[dependencies]
adventutil = { path = "../../adventutil" }

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
