[package]
name = "advent-of-code-2015-09a"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 09a"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["travelling-salesman"]

[dependencies]
adventutil = { path = "../../adventutil" }
itertools.workspace = true

[lints]
workspace = true
