[package]
name = "advent-of-code-2015-10a"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 10a"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["look-and-say-sequence"]

[dependencies]
adventutil = { path = "../../adventutil" }
itertools.workspace = true

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
