[package]
name = "advent-of-code-2015-10b"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 10b"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
keywords = ["look-and-say-sequence"]

[dependencies]
adventutil = { path = "../../adventutil" }
itertools = "0.13.0"

[dev-dependencies]
rstest = { version = "0.19.0", default-features = false }

[lints]
workspace = true
