[package]
name = "advent-of-code-2015-11a"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 11a"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
adventutil = { path = "../../adventutil" }
itertools = "0.13.0"

[dev-dependencies]
rstest = { version = "0.18.2", default-features = false }

[lints]
workspace = true
