[package]
name = "advent-of-code-2015-11b"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 11b"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
adventutil = { path = "../../adventutil" }
itertools.workspace = true

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
