[package]
name = "advent-of-code-2015-12b"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 12b"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["json"]

[dependencies]
adventutil = { path = "../../adventutil" }
json.workspace = true

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
