[package]
name = "advent-of-code-2015-13a"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 13a"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
keywords = ["travelling-salesman"]

[dependencies]
adventutil = { path = "../../adventutil" }
itertools = "0.11.0"

[lints]
workspace = true
