[package]
name = "advent-of-code-2015-13b"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 13b"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["travelling-salesman"]

[dependencies]
adventutil = { path = "../../adventutil" }
itertools.workspace = true

[lints]
workspace = true
