[package]
name = "advent-of-code-2015-14a"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 14a"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["modular-arithmetic"]

[dependencies]
adventutil = { path = "../../adventutil" }

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
