[package]
name = "advent-of-code-2015-14b"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 14b"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
adventutil = { path = "../../adventutil" }

[dev-dependencies]
rstest = { version = "0.18.2", default-features = false }

[lints]
workspace = true
