[package]
name = "advent-of-code-2015-15a"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 15a"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
keywords = ["optimization", "partitions"]

[dependencies]
adventutil = { path = "../../adventutil" }

[lints]
workspace = true
