[package]
name = "advent-of-code-2015-15b"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 15b"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["optimization", "partitions"]

[dependencies]
adventutil = { path = "../../adventutil" }

[lints]
workspace = true
