[package]
name = "advent-of-code-2015-17a"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 17a"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
keywords = ["partitions"]

[dependencies]
adventutil = { path = "../../adventutil" }
itertools = "0.13.0"

[lints]
workspace = true
