[package]
name = "advent-of-code-2015-17a"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 17a"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["partitions"]

[dependencies]
adventutil = { path = "../../adventutil" }
itertools.workspace = true

[lints]
workspace = true
