[package]
name = "advent-of-code-2015-18b"
edition.workspace = true
rust-version.workspace = true
description = "Solution to Advent of Code 2015, problem 18b"
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["game-of-life"]

[dependencies]
adventutil = { path = "../../adventutil" }

[lints]
workspace = true
